apps-gke-standard/setup/ingress-api-cliente.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cliente-microservice
  namespace: producao-api-cliente
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
spec:
  ingressClassName: nginx
  rules:
  - host: www.fezinhadasorte.com
    http:
      paths:
      - path: /api/usuario/cliente
        pathType: Prefix
        backend:
          service:
            name: cliente-microservice-clusterip-service
            port:
              number: 80
