apps-gke-standard/setup/ingress-api-pagamento.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pagamento-microservice
  namespace: producao-api-pagamento
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
spec:
  ingressClassName: nginx
  rules:
  - host: www.fezinhadasorte.com
    http:
      paths:
      - path: /api/usuario/pagamento
        pathType: Prefix
        backend:
          service:
            name: pagamento-microservice-clusterip-service
            port:
              number: 80
      - path: /api/csrf
        pathType: Prefix
        backend:
          service:
            name: pagamento-microservice-clusterip-service
            port:
              number: 80
