apps-gke-standard/setup/ingress-fezinha-frontend-www.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fezinha-frontend-www
  namespace: producao-front-end
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/client-max-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: www.fezinhadasorte.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end-fezinhadasorte-clusterip-service
                port:
                  number: 80
